# vecinita-embedding

./: Makefile  README.md  main.py  models.py  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
src/vecinita/: __init__.py  api.py  app.py  constants.py  schemas.py  service.py
tests/: __init__.py  conftest.py  fakes.py  test_api_integration.py  test_live_api.py  test_modal_entrypoint.py  test_schemas.py  test_service.py
