[project]
name = "vecinita-embedding"
version = "0.1.0"
description = "Fast open-source text embedding API deployed on Modal"
requires-python = ">=3.11"
dependencies = [
    "fastembed>=0.7.4",
    "fastapi[standard]>=0.135.1",
    "modal>=1.3.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
